--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -3,38 +3,45 @@
 {% block title %}Vehicle index{% endblock %}
 
 {% block body %}
-    <h1>Vehicle index</h1>
+<div class="container">
+    <h1>Gestion des véhicules</h1>
 
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Brand</th>
-                <th>Model</th>
-                <th>Description</th>
-                <th>Picture</th>
-                <th>DailyPrice</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
+                <th scope="col">Véhicule</th>
+                <th scope="col">Titre</th>
+                <th scope="col">Marque</th>
+                <th scope="col">Modèle</th>
+                <th scope="col">Description</th>
+                <th scope="col">Photo</th>
+                <th scope="col">Prix</th>
+                <th scope="col">actions</th>
             </tr>
         </thead>
         <tbody>
         {% for vehicle in vehicles %}
             <tr>
-                <td>{{ vehicle.id }}</td>
+                <th scope="row">{{ vehicle.id }}</td>
                 <td>{{ vehicle.title }}</td>
                 <td>{{ vehicle.brand }}</td>
                 <td>{{ vehicle.model }}</td>
                 <td>{{ vehicle.description }}</td>
-                <td>{{ vehicle.picture }}</td>
-                <td>{{ vehicle.dailyPrice }}</td>
-                <td>{{ vehicle.createdAt ? vehicle.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ vehicle.updatedAt ? vehicle.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td><img src="{{ vehicle.picture }}?random={{vehicle.id}}" style="width:200px;height:200px"/></td>
+                <td>{{ vehicle.dailyPrice }}&euro;</td>
                 <td>
-                    <a href="{{ path('vehicle_show', {'id': vehicle.id}) }}">show</a>
-                    <a href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
+                    <a href="{{ path('vehicle_show', {'id': vehicle.id}) }}" title="detail" class="btn-detail"><i class="fas fa-search"></i></a>
+                    <a href="{{ path('vehicle_edit', {'id': vehicle.id}) }}" title="edit" class="btn-edit"><i class="fas fa-edit"></i></a>
+                    <a href="{{ path('vehicle_delete', {'id': vehicle.id}) }}" title="delete" class="btn-delete"><i class="fas fa-trash-alt"></i></a>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{ path('vehicle_delete', {'id': vehicle.id}) }}">Oui, je veux supprimer</a>
+                            <a class="dropdown-item" href="#">Oups !</a>
+                        </div>
+                    </div>
                 </td>
             </tr>
         {% else %}
@@ -44,6 +51,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('vehicle_new') }}">Create new</a>
+    {{ include('vehicle/_form.html.twig') }}
+</div>
 {% endblock %}
