--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -21,3 +21,28 @@ header {
     }    
 }
 
+ul {
+    list-style-type: none;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    
+    .vehicles-list-item {
+        margin-bottom: 40px;
+    }
+
+    .vehicle-item {
+        display: flex;
+
+        &-picture img {
+            border-radius: 5px;
+        }
+
+        &-details {
+            display: flex;
+            flex-direction: column;
+            padding: 10px 20px;
+        }
+    }
+}
