--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -3,22 +3,19 @@
 {% block title %}Member index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Member index</h1>
-
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Login</th>
-                <th>Password</th>
-                <th>LastName</th>
-                <th>FirstName</th>
-                <th>EmailAddress</th>
-                <th>Gender</th>
+                <th>Nom</th>
+                <th>Prénom</th>
+                <th>Adresse email</th>
+                <th>Genre</th>
                 <th>Roles</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -26,17 +23,22 @@
             <tr>
                 <td>{{ member.id }}</td>
                 <td>{{ member.login }}</td>
-                <td>{{ member.password }}</td>
                 <td>{{ member.lastName }}</td>
                 <td>{{ member.firstName }}</td>
                 <td>{{ member.emailAddress }}</td>
                 <td>{{ member.gender }}</td>
                 <td>{{ member.roles ? member.roles|json_encode : '' }}</td>
-                <td>{{ member.createdAt ? member.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ member.updatedAt ? member.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('member_show', {'id': member.id}) }}">show</a>
-                    <a href="{{ path('member_edit', {'id': member.id}) }}">edit</a>
+                    <a href="{{ path('member_show', {'id': member.id}) }}" title="detail" class="btn-detail"><i class="fas fa-search"></i></a>
+                    <a href="{{ path('member_edit', {'id': member.id}) }}" title="edit" class="btn-edit"><i class="fas fa-edit"></i></a>
+                    <div class="btn-delete" title="delete">
+                        <i class="fas fa-trash-alt dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{ path('member_delete', {'id': member.id}) }}">Oui, je veux supprimer</a>
+                            <a class="dropdown-item" href="#">Oups !</a>
+                        </div>
+                        </i>
+                    </div>
                 </td>
             </tr>
         {% else %}
@@ -47,5 +49,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('member_new') }}">Create new</a>
+    {{ include('member/_form.html.twig') }}
+</div>
 {% endblock %}
