search filter ok

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -46,3 +46,14 @@ ul {
         }
     }
 }
+
+form.available-vehicle-search-form {
+    padding: 1rem;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+header .jumbotron {
+    position: relative;
+    top: 8rem;
+}
