--- a/templates/form/fields.html.twig
+++ b/templates/form/fields.html.twig
@@ -4,6 +4,9 @@
     {{ block('form_widget') }}
     <div class="vehicle-picture-preview">Aucune photo sélectionnée</div>
     {% if image_url is not null %}
-        <img src="{{ asset(image_url) }}" style="width: 300px" class="previous-vehicle-picture mt-4"/>
+        <div class="d-flex flex-column">
+            <img src="{{ uploaded_asset(image_url) }}" style="width: 300px" class="previous-vehicle-picture mt-4" name="vehicle-picture"/>
+            <label for="vehicle-picture">{{image_name}}</label>
+        </div>
     {% endif %}
 {% endblock %}
