--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -6,5 +6,5 @@
     <h1>Create new Order</h1>
     {{ include('order/_form.html.twig') }}
 
-    <a href="{{ path('order_index') }}">back to list</a>
+    <a href="{{ path('admin_order_index') }}">back to list</a>
 {% endblock %}
