--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,19 +11,19 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
             </div>
         {% endif %}
 
         <div class="text-center">
-            <h1>Please sign in</h1>
+            <h1>Me connecter</h1>
         </div>
         <div class="form-group">
             <label for="inputLogin" class="form-label mt-4">Login</label>
-            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="username" required autofocus>
+            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="username" required autofocus placeholder="TheJohnDoe">
         </div>
         <div class="form-group mb-4">
-            <label for="inputPassword" class="form-label mt-4">Password</label>
+            <label for="inputPassword" class="form-label mt-4">Mot de passe</label>
             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
         </div>
 
@@ -42,10 +42,13 @@
             </div>
         #}
 
-        <div class="text-center d-flex flex-column">
+        <div class="text-center">
             <button class="btn btn-primary" type="submit">
-                Sign in
+                Connexion
             </button>
+        </div>
+
+        <div class="text-center mt-4">
             <a href="{{ path('app_forgot_password_request') }}" class="mt-4">Mot de passe oublié</a>
         </div>
 
