--- a/templates/order/_form.html.twig
+++ b/templates/order/_form.html.twig
@@ -1,4 +1,44 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Véhicule</th>
+                <td>{{ booking.vehicleId.title }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ booking.vehicleId.description }}</td>
+            </tr>
+            <tr>
+                <th>Photo</th>
+                <td class="d-flex flex-column"><img src="{{ cars_pictures_path ~ '/' ~ booking.vehicleId.picture }}" style="width: 500px" name="vehicle-picture"/><label for="vehicle-picture">{{ booking.vehicleId.title }}</label></td>
+            </tr>
+            <tr>
+                <th>Prix journalier</th>
+                <td>{{ booking.vehicleId.dailyPrice }} &euro;</td>
+            </tr>
+            <tr>
+                <th>Période du</th>
+                <td>{{ booking.datetimeFrom }}</td>
+            </tr>
+            <tr>
+                <th>Au</th>
+                <td>{{ booking.datetimeTo }}</td>
+            </tr>
+            <tr>
+                <th>Prix total</th>
+                <td>{{ booking.totalPrice }} &euro;</td>
+            </tr>
+        </tbody>
+    </table>
+
+{{ form_widget(form) }}
+
+    <input type="hidden" name="vehicleId" value="{{ booking.vehicleId.id }}">
+    <input type="hidden" name="memberId" value="{{ booking.memberId.id }}">
+    <input type="hidden" name="dateFrom" value="{{ booking.datetimeFrom }}">
+    <input type="hidden" name="dateTo" value="{{ booking.datetimeTo }}">
+    <input type="hidden" name="totalPrice" value="{{ booking.totalPrice }}">
+    <div class="d-flex justify-content-between flex-row-reverse my-4">
+        <button class="btn btn-success" type="submit"><i class="fas fa-save me-2"></i>{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
