--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Order{% endblock %}
+{% block title %}{{parent()}} - Confirmation réservation{% endblock %}
 
 {% block body %}
-    <h1>Create new Order</h1>
-    {{ include('order/_form.html.twig') }}
+<div class="container mt-4 col-md-6">
+    <h1>Vérifier et confirmer la réservation</h1>
+    {{ include('order/_form.html.twig', {'button_label': 'Réserver'}) }}
 
-    <a href="{{ path('admin_order_index') }}">back to list</a>
+    <a href="{{ path('home') }}" class="btn btn-primary" title="retour à l'accueil"><i class="fas fa-arrow-left me-2"></i>Retour</a>
+</div>
+</div>
 {% endblock %}
